force-app/config/objects/Log__c/fields/Configs_Invoked__c.field-meta.xml
<CustomField>
    <fullName>Configs_Invoked__c</fullName>
    <description>Comma-delimited list of Routing_Config__mdt DeveloperNames active in this transaction.</description>
    <label>Configs Invoked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>