force-app/config/objects/Log__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <description>Count of ERROR + FATAL entries in this transaction.</description>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>