force-app/config/objects/Log__c/fields/Heap_Used_Kb__c.field-meta.xml
<CustomField>
    <fullName>Heap_Used_Kb__c</fullName>
    <description>Heap used in KB at flush time.</description>
    <label>Heap Used (KB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>