force-app/config/objects/Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Overall transaction outcome.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>No_Match</fullName>
                <label>No Match</label>
            </value>
            <value>
                <fullName>Retry_Exhausted</fullName>
                <label>Retry Exhausted</label>
            </value>
            <value>
                <fullName>Lock_Contention</fullName>
                <label>Lock Contention</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>