force-app/config/objects/Log__c/fields/Total_Entries__c.field-meta.xml
<CustomField>
    <fullName>Total_Entries__c</fullName>
    <description>Total entries buffered and inserted for this transaction.</description>
    <label>Total Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>