force-app/config/objects/Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The agent who triggered the routing request.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>